# db-tool

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md  SKILL.md  dbtool-design.md  docker-compose.integration.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/adapter-amqp/: Cargo.toml
crates/adapter-amqp/src/: lib.rs  management.rs
crates/adapter-amqp/tests/: live_stateful.rs
crates/adapter-cassandra/: Cargo.toml
crates/adapter-cassandra/src/: lib.rs
crates/adapter-db2/: Cargo.toml
crates/adapter-db2/src/: lib.rs
crates/adapter-kafka/: Cargo.toml
crates/adapter-kafka/src/: lib.rs
crates/adapter-kafka/src/backend/: mod.rs  rdkafka_backend.rs  rskafka_backend.rs
crates/adapter-kafka/tests/: live_bounded.rs
crates/adapter-mongo/: Cargo.toml
crates/adapter-mongo/src/: lib.rs
crates/adapter-nats/: Cargo.toml
crates/adapter-nats/src/: lib.rs
crates/adapter-nats/tests/: live_stateful.rs
crates/adapter-redis/: Cargo.toml
crates/adapter-redis/src/: lib.rs
crates/adapter-search/: Cargo.toml
crates/adapter-search/src/: lib.rs
crates/adapter-sql/: Cargo.toml
crates/adapter-sql/src/: identifier.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs  value.rs
crates/adapter-sqlserver/: Cargo.toml
crates/adapter-sqlserver/src/: lib.rs
crates/adapter-timeseries/: Cargo.toml
crates/adapter-timeseries/src/: lib.rs
crates/dbtool-cli/: Cargo.toml
crates/dbtool-cli/src/: artifacts.rs  main.rs
crates/dbtool-cli/src/cmd/: caps.rs  conn.rs  cql.rs  db2.rs  doc.rs  kv.rs  mod.rs  mq.rs  ping.rs  search.rs  sql.rs  transfer.rs  ts.rs
crates/dbtool-cli/tests/: bounded_document_search_ts.rs  bounded_messaging.rs  bounded_sql.rs  caps_operations.rs  cli_format.rs  cli_json.rs  conn_crud.rs  db_completeness.rs  kv_binary_raw.rs  live_bounded_cql.rs  live_document.rs  live_messaging.rs  live_observability.rs  live_services.rs  live_sql_params.rs  mq_cli.rs  named_sql_atomic.rs  sql_readonly_safety.rs  transfer_artifacts.rs  ts_cli.rs
crates/dbtool-core/: Cargo.toml
crates/dbtool-core/src/: error.rs  lib.rs
crates/dbtool-core/src/config/: env.rs  file.rs  mod.rs
crates/dbtool-core/src/dsn/: mod.rs  parse.rs  redact.rs
crates/dbtool-core/src/model/: bounded.rs  document.rs  input.rs  kv.rs  message.rs  meta.rs  mod.rs  result.rs  search.rs  series.rs  value.rs
crates/dbtool-core/src/port/: capability.rs  connector.rs  mod.rs
crates/dbtool-core/src/registry/: alias.rs  mod.rs  registry.rs
crates/dbtool-core/src/service/: atomic_file.rs  formatter.rs  limiter.rs  manager.rs  mod.rs  resolver.rs  safety.rs  throttle.rs
crates/dbtool-registry/: Cargo.toml
crates/dbtool-registry/src/: lib.rs
crates/dbtool-registry/tests/: embedded_library.rs
crates/dbtool-tui/: Cargo.toml
crates/dbtool-tui/src/: app.rs  main.rs  state.rs  terminal.rs
crates/dbtool-tui/src/ui/: mod.rs
docker/dbtool/: Dockerfile
docker/fixtures/: README.md
docker/fixtures/mongo/: Dockerfile  dbtool-fixture.js
docker/fixtures/mysql/: Dockerfile
docker/fixtures/postgres/: Dockerfile
docker/fixtures/redis/: Dockerfile  docker-entrypoint-fixtures.sh
docker/search-tls/: Dockerfile
docs/: connections.example.toml  core.md  db-completeness-manifest.md  db-completeness-tasks.md  extended-backends.md  final-goal-audit.md  implementation-status.md  integration-testing.md  interface-completion-tasks.zh-CN.md  interface-usage.zh-CN.md  messaging-boundaries.md  nats-stateful-consumption.md  npm-publication-tasks.zh-CN.md  tasks.md  tidb-compat-design.md
docs/test-evidence/: README.md  bounded-connection-config.md  bounded-document-search-timeseries.md  capability-negotiation.md  cassandra-catalog-bounded.md  cassandra.md  catalog-scalar-byte-budgets.md  cockroachdb.md  confirmation-target-binding.md  connection-config-crud.md  db2-catalog-bounded.md  db2-host-runtime-blocker.md  dependency-security-audit.md  dragonfly.md  elasticsearch.md  final-residue-audit.md  kafka-redpanda.md  keydb.md  kv-read-envelopes.md  legacy-api-lifecycle.md  mariadb.md  message-consume-byte-budgets.md  message-produce-input-budgets.md  messaging-bounded-catalogs.md  messaging-tls.md  mongodb.md  mutation-input-budgets.md  mysql.md  nats.md  nested-metadata-budgets.md  npm-publication.md  opensearch-security.md  opensearch.md  postgresql.md  prometheus.md  rabbitmq.md  read-budget-envelopes.md  redis-messaging.md  redis.md  release-packaging.md  (+14 more)
scripts/: generate-cli-artifacts.sh  integration-cassandra-fixture-data-test.sh  integration-cassandra-test.sh  integration-cassandra-up.sh  integration-compat-test.sh  integration-compat-up.sh  integration-connection-config-test.sh  integration-custom-env-test.sh  integration-data-roundtrip-test.sh  integration-db-suite.sh  integration-db2-test.sh  integration-db2-up.sh  integration-down.sh  integration-elasticsearch-test.sh  integration-elasticsearch-up.sh  integration-env.sh  integration-external-requirement-test.sh  integration-fixture-data-test.sh  integration-fixture-images-test.sh  integration-flow-control-test.sh  integration-kafka-vendor-test.sh  integration-mq-native-test.sh  integration-mq-test.sh  integration-mq-tls-prepare.sh  integration-mq-tls-test.sh  integration-mq-tls-up.sh  integration-mq-up.sh  integration-observability-test.sh  integration-observability-tls-prepare.sh  integration-observability-up.sh  integration-opensearch-security-prepare.sh  integration-opensearch-security-test.sh  integration-opensearch-security-up.sh  integration-pg-compat-test.sh  integration-pg-compat-up.sh  integration-redshift-test.sh  integration-scylla-test.sh  integration-scylla-up.sh  integration-server-timeout-test.sh  integration-sqlserver-test.sh  (+36 more)
testdata/: base-cassandra-seed.cql  base-mongo-seed.ndjson  base-mysql-seed.sql  base-postgres-seed.sql  base-redis-seed.commands  db-completeness.manifest  search-tls-seed.ndjson  sqlite-core-flow.sql  tidb-ha-drills.manifest
