[workspace]
resolver = "2"
members = [
    "crates/dbtool-core",
    "crates/adapter-sql",
    "crates/adapter-redis",
    "crates/adapter-mongo",
    "crates/adapter-kafka",
    "crates/adapter-amqp",
    "crates/adapter-nats",
    "crates/dbtool-registry",
    "crates/dbtool-cli",
    "crates/dbtool-tui",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
authors       = ["YoVinchen <gzh298255@gmail.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/YoVinchen/db-tool"
rust-version  = "1.80"

[workspace.dependencies]
# ── Async runtime ─────────────────────────────────────────────────────────────
tokio         = { version = "1",    features = ["full"] }
async-trait   = "0.1"
futures       = "0.3"

# ── Error handling ─────────────────────────────────────────────────────────────
thiserror     = "2"
anyhow        = "1"

# ── Serialization ──────────────────────────────────────────────────────────────
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"

# ── Logging / Tracing ─────────────────────────────────────────────────────────
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── SQL ───────────────────────────────────────────────────────────────────────
sqlx          = { version = "0.8", default-features = false, features = [
                    "runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite", "macros",
                ] }

# ── SQL safety parser ─────────────────────────────────────────────────────────
sqlparser     = "0.51"

# ── KV ────────────────────────────────────────────────────────────────────────
redis         = { version = "0.27", features = ["tokio-rustls-comp", "tls-rustls-insecure"] }

# ── Document ──────────────────────────────────────────────────────────────────
mongodb       = { version = "3", default-features = false, features = [
                    "compat-3-3-0", "bson-2", "rustls-tls",
                ] }

# ── Messaging ─────────────────────────────────────────────────────────────────
rskafka       = "0.5"
rdkafka       = { version = "0.36", features = ["cmake-build"] }
lapin         = "2"
async-nats    = "0.37"

# ── Flow control ──────────────────────────────────────────────────────────────
governor      = "0.6"
tokio-util    = { version = "0.7", features = ["time"] }

# ── CLI ───────────────────────────────────────────────────────────────────────
clap          = { version = "4", features = ["derive", "env", "color"] }

# ── TUI ───────────────────────────────────────────────────────────────────────
ratatui       = "0.28"
crossterm     = "0.28"

# ── Utilities ─────────────────────────────────────────────────────────────────
bytes         = { version = "1", features = ["serde"] }
url           = "2"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
sha2          = "0.10"
hex           = "0.4"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
