[package]
name        = "adapter-cassandra"
description = "Cassandra and ScyllaDB adapter for dbtool"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
dbtool-core = { path = "../dbtool-core" }
async-trait = { workspace = true }
futures     = { workspace = true }
scylla      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
