[package]
name        = "adapter-mongo"
description = "MongoDB document store adapter for dbtool"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
dbtool-core  = { path = "../dbtool-core" }
async-trait  = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
mongodb      = { workspace = true }
futures      = { workspace = true }
