[package]
name        = "adapter-sql"
description = "SQL adapter for dbtool: MySQL / MariaDB / TiDB / PostgreSQL / CockroachDB / TimescaleDB / SQLite"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
dbtool-core   = { path = "../dbtool-core" }
async-trait   = { workspace = true }
tokio         = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
sqlx          = { workspace = true }
futures       = { workspace = true }
bytes         = { workspace = true }
chrono        = { workspace = true }
