[package]
name        = "adapter-timeseries"
description = "Prometheus-compatible time-series adapter for dbtool"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
dbtool-core = { path = "../dbtool-core" }
async-trait = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
serde_json  = { workspace = true }
url         = { workspace = true }
